<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/purchase_order_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_quote_rb"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"/>

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_order_rb"
                android:layout_marginStart="16dp"
                android:textSize="20sp"/>

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/job_name_inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/job_name_id"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/job_name_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_marginTop="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dialog_sendto_text"
            android:textSize="20sp"/>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center_horizontal"
            android:layout_marginBottom="8dp">

            <CheckBox
                android:id="@+id/checkBox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ced_checkbox"
                android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/checkBox2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/crawford_checkbox"
                android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/checkBox3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dealers_checkbox"
                android:layout_weight="1"/>

            <CheckBox
                android:id="@+id/checkBox4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/summit_checkbox"
                android:layout_weight="1"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/dialog_cancel_button"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_Button"
                android:backgroundTint="@color/colorPrimary"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/cancel_button"
                android:textColor="@color/colorAccent"
                android:text="@string/dialog_send_button"/>

        </RelativeLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>