<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:orientation="vertical">

        <RadioGroup
            android:id="@+id/purchase_order_rg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            android:layout_gravity="center_horizontal">

            <RadioButton
                android:id="@+id/quote_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_quote_rb"
                android:layout_marginEnd="16dp"
                android:textSize="20sp"/>

            <RadioButton
                android:id="@+id/order_rb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_order_rb"
                android:layout_marginStart="16dp"
                android:textSize="20sp"/>

        </RadioGroup>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/job_name_inputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/job_name_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/job_name_hint" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:text="@string/dialog_cancel_button"
                android:textSize="16sp"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/send_Button"
                app:backgroundTint="@color/colorPrimary"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/cancel_button"
                android:text="@string/dialog_send_button"
                android:textSize="16sp"
                android:textColor="@android:color/white"/>

        </RelativeLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>